Change pizza image source in index.html
Updated image source for the first pizza.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Bienvenido a Pablos Pizza</h1>
     <div class="pizzas">
   <div class="pizza">
-    <img src="pizza_campera.JPEG" alt="Pizza 1">
+    <img src="pizza_campera2.JPEG" alt="Pizza 1">
     <p>Clásica pizza con alcachofas, champiñones, jamón y olivas</p>
   </div>
 
@@ -35,3 +35,5 @@
  <!-- Aquí irá el contenido de tus pizzas -->
 </body>
 </html>
+
+
